# arrow-datafusion

ballista/rust/core/: Cargo.toml
ballista/rust/core/src/serde/logical_plan/: from_proto.rs  mod.rs  to_proto.rs
ballista/rust/executor/: Cargo.toml
datafusion/: Cargo.toml
datafusion-cli/: Cargo.toml
datafusion-examples/: Cargo.toml
datafusion/common/: Cargo.toml
datafusion/common/src/: column.rs  scalar.rs
datafusion/common/src/scalar/: mod.rs
datafusion/core/: Cargo.toml
datafusion/core/src/physical_plan/joins/: hash_join.rs
datafusion/core/tests/parquet/data/: unsorted_fixed_size_binary.parquet
datafusion/core/tests/sql/: parquet.rs
datafusion/expr/: Cargo.toml
datafusion/expr-common/src/type_coercion/: binary.rs
datafusion/expr/src/: utils.rs
datafusion/expr/src/type_coercion/: binary.rs
datafusion/functions/src/datetime/: to_timestamp.rs
datafusion/jit/: Cargo.toml
datafusion/physical-expr/src/: array_expressions.rs
datafusion/physical-expr/src/aggregate/: array_agg_distinct.rs  min_max.rs
datafusion/physical-expr/src/expressions/: binary.rs
datafusion/proto/: Cargo.toml
datafusion/sql/: Cargo.toml
datafusion/sql/src/: planner.rs  select.rs
datafusion/sqllogictest/test_files/: aggregate.slt
datafusion/src/: scalar.rs
datafusion/src/datasource/: memory.rs  parquet.rs
datafusion/src/datasource/listing/: helpers.rs
datafusion/src/execution/: context.rs
datafusion/src/logical_plan/: builder.rs  expr.rs
datafusion/src/optimizer/: common_subexpr_eliminate.rs  constant_folding.rs  utils.rs
datafusion/src/physical_optimizer/: repartition.rs
datafusion/src/physical_plan/: datetime_expressions.rs  functions.rs  group_scalar.rs  hash_join.rs  parquet.rs  planner.rs
datafusion/src/physical_plan/expressions/: binary.rs  min_max.rs
datafusion/src/sql/: planner.rs  utils.rs
datafusion/src/test/: variable.rs
datafusion/src/variable/: mod.rs
datafusion/tests/: sql.rs
