# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-cli"
description = "Command Line Client for DataFusion query engine."
version = "18.0.0"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
edition = "2021"
keywords = [ "arrow", "datafusion", "query", "sql" ]
license = "Apache-2.0"
homepage = "https://github.com/apache/arrow-datafusion"
repository = "https://github.com/apache/arrow-datafusion"
rust-version = "1.62"
readme = "README.md"

[dependencies]
arrow = "32.0.0"
async-trait = "0.1.41"
clap = { version = "3", features = ["derive", "cargo"] }
datafusion = { path = "../datafusion/core", version = "18.0.0" }
dirs = "4.0.0"
env_logger = "0.9"
mimalloc = { version = "0.1", default-features = false }
object_store = { version = "0.5.0", features = ["aws", "gcp"] }
parking_lot = { version = "0.12" }
rustyline = "10.0"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
url = "2.2"

[patch.crates-io]
arrow-buffer = { path = "/Users/max/src/external/arrow-rs/arrow-buffer" }
arrow-row = { path = "/Users/max/src/external/arrow-rs/arrow-row" }
arrow-array = { path = "/Users/max/src/external/arrow-rs/arrow-array" }
arrow-schema = { path = "/Users/max/src/external/arrow-rs/arrow-schema" }
arrow-arith = { path = "/Users/max/src/external/arrow-rs/arrow-arith" }
arrow-select = { path = "/Users/max/src/external/arrow-rs/arrow-select" }
arrow-ord = { path = "/Users/max/src/external/arrow-rs/arrow-ord" }
arrow-string = { path = "/Users/max/src/external/arrow-rs/arrow-string" }
arrow-cast = { path = "/Users/max/src/external/arrow-rs/arrow-cast" }
arrow-ipc = { path = "/Users/max/src/external/arrow-rs/arrow-ipc" }
arrow-json = { path = "/Users/max/src/external/arrow-rs/arrow-json" }
arrow-data = { path = "/Users/max/src/external/arrow-rs/arrow-data" }
